removed is_init from Workload + added init_workloads in vm